2025-09-06  Zhengyi Fu  <i@fuzy.me>

	Add require 'flymake to editor_diagnostics function.

	* site-lisp/gptel-config.el (editor_diagnostics): Add require
	statement to ensure flymake is loaded before use.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	Add editor_diagnostics tool to gptel tools and kimi-agent preset.

	* site-lisp/gptel-config.el (editor_diagnostics): New tool to get
	diagnostics from editor.
	(kimi-agent): Add editor_diagnostics to toolset.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	Update +gptel-edit-file-async and run_command example.

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Remove
	kill-buffer and window restoration code to prevent unwanted buffer
	closing and window changes.
	(run_command): Update example commit message format to remove
	generated with eca attribution lines.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* AGENTS.md: Tell the agent to start a new record if necessary.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Fix window restoration in
	+gptel-edit-file-async and improve comint integration.
	(+gptel-edit-file-async): Use window-main-window instead of
	frame-root-window for better compatibility.
	(run_command): Add comint-highlight-prompt face to command prompt
	and add command to input history.
	(gptel-agent): Replace manual guideline collection with
	gptel-agent--setup-context function that uses gptel-add-file
	to include AGENTS.md in the context.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add editorconfig and jsonrpc as built-in packages.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Add with-editor require statement.
	Ensure with-editor is properly loaded before using it in the
	run_command tool implementation.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Improve run_command tool output
	formatting.
	(run_command): Insert separator and display command before
	output to improve readability when multiple commands are run.
