@@ -1,3 +1,11 @@
+2025-09-07  Zhengyi Fu  <i@fuzy.me>
+
+	Improve +gptel-edit-file-async function and update error message.
+
+	* site-lisp/gptel-config.el (+gptel-edit-file-async): Improve window
+	selection logic for ediff, update error message for user rejection,
+	add proper buffer cleanup.
+
 2025-09-06  Zhengyi Fu  <i@fuzy.me>
 
 	Add require 'flymake to editor_diagnostics function.
